# TempSSD

./: Cargo.toml  README.md
legacy_python/: monitor_ssd_v1.py
src/: lib.rs  main.rs
