[package]
name = "monitor-ssd"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "monitor_ssd_win"
path = "src/bin/windows.rs"

[[bin]]
name = "monitor_ssd_linux"
path = "src/bin/linux.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
crossterm = "0.27"
chrono    = "0.4"
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
